--- a/build.gradle
+++ b/build.gradle
@@ -17,11 +17,14 @@ apply plugin: 'liquibase'
 
 repositories {
     mavenCentral()
+    maven {
+        url 'https://repo.spring.io/libs-milestone'
+    }
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
-
+    compile("org.springframework.boot:spring-boot-starter-web:1.4.0.M2")
 }
 
 liquibase {
