Clean up redundant files and directories.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-/gradle
+gradle
 
-/.idea
-/gradlew
-/settings.gradle
-/gradlew.bat
+.idea
+gradlew
+settings.gradle
+gradlew.bat
 .idea/workspace.xml
