--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,10 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile("org.springframework.boot:spring-boot-starter-web:1.4.0.M2")
     compile ("mysql:mysql-connector-java:5.1.38")
+    compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.0.9.Final'
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.0.9.Final'
+
+
 }
 
 liquibase {
